<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginVertical="15dp"
        android:layout_height="0dp"
        >

        <TableLayout
            android:id="@+id/movies_tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="10dp"
        >

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneThis"/>
        <TextView
            android:id="@+id/phone"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="+375444844976"
            app:layout_anchor="@id/create_button"
            app:layout_anchorGravity="top|center"
            android:textAlignment="center"
            />
    </LinearLayout>


    <Button
        android:id="@+id/create_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/createNew"
        app:layout_anchor="@+id/firstStepLinearLayout"
        app:layout_anchorGravity="bottom|center" />

</LinearLayout>